$Id: ChangeLog,v 1.186 2005/03/24 16:09:38 freckle Exp $

2005-03-21  Matthias Ringwald <mringwal@.inf.ethz.ch>

	* configure, include/unidst.h: added creation of include/unistd_orig.h
	Added NUT_ wrapper for nut's unistd.h functions. Use <unistd_orig.h>
	instead of "/usr/include/unistd.h". Relevant for unix emulation only.

	* Makefile: added Bernado Innocenti's patches to compile unix c++

2005-03-13  Harald Kipp  <harald.kipp@egnite.de>

	* net/arpcache.c: If NutArpOutput() failed, then NutArpCacheQuery()
	released the already released NETBUF. This bug had been fixed.
	If NutArpAllocNetBuf() fails, the ARP entry will now be
	removed immediately. Additional check for valid entry pointer 
	added. These modifications had been suggested by Dusan Ferbas.
	Finally memcpy() has been replaced by a simple loop in order
	to provide a work around for GCC Bug #18251.


2005-03-09  Henrik Maier  <hwmaier@users.sourceforge.net>

        * os/arch/avr_timer.c: Finally implemented the correct timer routines
        and init for AT90CAN128. Timer2 is now used on AT90CAN128 rather
        Timer0 because Atmel (don't blame me) swapped the Timer designation.


2005-03-04  Ole Reinhardt  <ole.reinhardt@embedded-it.de>
	* dev/adc.c; include/dev/adc.h
	Added function void ADCStartLowNoiseConversion(void)
	This function enters sleep mode!!! Be shure to read
	the AVR datasheet before using this function
	Only implemented on avr_gcc

2005-02-26  Oliver Schulz  <olischulz@web.de>

	* os/arch/avr_nutinit.c: Moved heap initialization to section .init5 to
	support c++ constructors for static objects.

	* tools/nutconf/nutcomponent.c: Added support for relative paths for sample
	application directory.


2005-02-23 Matthias Ringwald <mringwal@.inf.ethz.ch>

	* include/unistd.h: Correctly include /usr/include/unistd.h for
	unix emulation

2005-02-23  Henrik Maier  <hwmaier@users.sourceforge.net>

        * app/basemon/basemon.c: Some minor changes to support AT90CAN128 MCU
